Fixed pparse overflow

--- a/src/App.css
+++ b/src/App.css
@@ -522,7 +522,6 @@ footer .footer-content a {
   }
   .pparse {
     margin-bottom: 54%;
-    overflow: hidden;
   }
 }
 .ball-container {
